--- a/.github/workflows/run_harvest.yaml
+++ b/.github/workflows/run_harvest.yaml
@@ -1,10 +1,13 @@
 name: Run Harvest
 
+permissions:
+  contents: write
+
 on:
   schedule:
     # Runs daily at 2:02 AM Central Daylight Time (UTC-5 → 07:02 UTC)
     - cron: '2 7 * * *'
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch:
 
 jobs:
   harvest:
@@ -12,6 +15,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true  # allow pushes with GITHUB_TOKEN
+          fetch-depth: 0            # full history for clean commits
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -25,3 +31,11 @@ jobs:
       - name: Run harvest.py
         run: |
           python harvest.py
+
+      - name: Commit and push updated words.xml
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add xml/words.xml
+          git diff --quiet --cached || git commit -m "chore: append $(date +'%Y-%m-%d') puzzle"
+          git push
